--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,6 +1,6 @@
 #login {
   align-items: center;
-  margin: 50px 50px;
-  padding: 50px 5px;
+  margin: auto;
+  padding: 50px 50px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
